--- a/star-wars/src/app/components/planets/planets.component.scss
+++ b/star-wars/src/app/components/planets/planets.component.scss
@@ -3,22 +3,62 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 2rem;
+    min-height: 80vh;
 
     .planet {
-        min-width: 15%;
+        position: relative;
+        min-width: 18%;
         min-height: 45%;
-        max-width: 15%;
+        max-width: 18%;
         margin-bottom: 2rem;
-        padding: 1.5rem;
-        border-radius: 3%;
-        overflow: hidden;
-        // background-color: rgb(252 252 252 / 13%);
-        background-color: rgb(0 0 0 / 56%);
-        box-shadow: 0px 0px 83px -39px white;
+        
+        .front, .back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border: 2px solid #cad358;
+            border-radius: 3%;
+            background-color: #290000;;
+            overflow: hidden;
+            backface-visibility: hidden;
+            transition: transform .6s linear;
+        }
+
+        .front {
+            background-image: url("https://avatars.mds.yandex.net/i?id=d22e75f906d79dbb2c5bd1b670c351c7-5658951-images-thumbs&n=13");
+            background-size: cover;
+            font-family: 'Ceviche One', cursive;
+            transform: perspective(600px) rotateY(0);
+
+            h2 {
+                text-align: center;
+                color: black;
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+                font-size: 4.5rem;
+            }
+        }
+
+        .back {
+            padding: 1.5rem;
+            overflow: hidden;
+            transform: perspective(600px) rotateY(180deg);
+        }
 
         h3 {
             text-align: center;
             padding: 1rem;
+        }
+
+        &:hover {
+            .front {
+                transform: perspective(600px) rotateY(-180deg);
+            }
+
+            .back {
+                transform: perspective(600px) rotateY(0);
+            }
         }
     }
 }
