Сделан роутинг, написана логика для фильтрации

--- a/star-wars/src/app/app.component.html
+++ b/star-wars/src/app/app.component.html
@@ -4,8 +4,7 @@
     </div>
 </header>
 <main>
-    <app-planets></app-planets>
-    <!-- <app-planet></app-planet> -->
+    <router-outlet></router-outlet>
 </main>
 <footer>
 
