--- a/star-wars/src/app/components/planet/planet.component.scss
+++ b/star-wars/src/app/components/planet/planet.component.scss
@@ -1,24 +1,26 @@
-.planets {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.planet {
+    min-height: 80vh;
+    background-color: #29000091;
     padding: 2rem;
+    margin: 2rem;
+    border-radius: 2%;
+    border: 2px solid #cad358;
 
-    .planet {
-        min-width: 15%;
-        min-height: 45%;
-        max-width: 15%;
-        margin-bottom: 2rem;
-        padding: 1.5rem;
-        border-radius: 3%;
-        overflow: hidden;
-        // background-color: rgb(252 252 252 / 13%);
-        background-color: rgb(0 0 0 / 56%);
-        box-shadow: 0px 0px 83px -39px white;
+    .img {
+        float: left; 
+        max-width: 50rem;
+        margin: 0 2rem 2rem 0;
 
-        h3 {
-            text-align: center;
-            padding: 1rem;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    
+    .description {
+
+        p {
+            margin-bottom: 2rem;
         }
     }
 }
