--- a/star-wars/src/app/components/planet/planet.component.scss
+++ b/star-wars/src/app/components/planet/planet.component.scss
@@ -1,26 +1,76 @@
 .planet {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+    "img planet"
+    "residents residents";
+    gap: 3rem;
     min-height: 80vh;
-    background-color: #29000091;
     padding: 2rem;
     margin: 2rem;
-    border-radius: 2%;
-    border: 2px solid #cad358;
 
     .img {
-        float: left; 
-        max-width: 50rem;
-        margin: 0 2rem 2rem 0;
+        grid-area: img;
+        overflow: hidden;
+        box-shadow: 0px 0px 12px -7px #cad358;
 
         img {
-            width: 100%;
             height: 100%;
+            width: 100%;
         }
     }
     
-    .description {
+    .planet-info {
+        grid-area: planet;
 
-        p {
+        table {
+            border-spacing: 1rem;
+
+            caption {
+                font-size: 3.5rem;
+                margin-bottom: 1rem;
+                font-weight: bold;
+            }
+            
+            th {
+                text-align: left;
+                color: #cad358;
+            }
+        }
+    }
+
+    .residents-info {
+        grid-area: residents;
+
+        img {
+            float: left;
+            width: 30%;
+            margin: 0 1rem 1rem 0;
+        }
+
+        h3 {
             margin-bottom: 2rem;
+            text-align: center;
+            font-size: 2.5rem;
+        }
+        .residents {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 2rem;
+
+            .resident {
+                border: 1px solid white;
+                border-radius: 10px;
+                padding: 1rem;
+                width: 30%;
+
+                span {
+                    font-weight: bold;
+                    color: #cad358;
+                }
+            }
         }
     }
 }
