--- a/star-wars/src/app/components/planets/planets.component.scss
+++ b/star-wars/src/app/components/planets/planets.component.scss
@@ -17,8 +17,8 @@
             width: 100%;
             height: 100%;
             border: 2px solid #cad358;
-            border-radius: 3%;
-            background-color: #290000;;
+            border-radius: 10px;
+            background-color: black;
             overflow: hidden;
             backface-visibility: hidden;
             transition: transform .6s linear;
