--- a/star-wars/src/app/components/planet/planet.component.scss
+++ b/star-wars/src/app/components/planet/planet.component.scss
@@ -8,7 +8,7 @@
     gap: 3rem;
     min-height: 80vh;
     padding: 2rem;
-    margin: 2rem;
+    position: relative;
 
     .img {
         grid-area: img;
@@ -24,11 +24,21 @@
     .planet-info {
         grid-area: planet;
 
+        .exit {
+            float: right;
+            width: 5rem;
+
+            img {
+                width: 5rem;
+                box-shadow: 0px 0px 26px -5px #cad358;
+            }
+        }
+
         table {
             border-spacing: 1rem;
 
             caption {
-                font-size: 3.5rem;
+                font-size: 35px;
                 margin-bottom: 1rem;
                 font-weight: bold;
             }
@@ -72,7 +82,7 @@
         h3 {
             margin-bottom: 2rem;
             text-align: center;
-            font-size: 2.5rem;
+            font-size: 25px;
         }
         .residents {
             display: flex;
@@ -84,7 +94,7 @@
                 border: 1px solid #cad358;;
                 border-radius: 10px;
                 padding: 1rem;
-                width: 30%;
+                width: 30rem;
 
                 span {
                     font-weight: bold;
@@ -93,4 +103,30 @@
             }
         }
     }
+
+    .not-found {
+        grid-area: residents;
+        text-align: center;
+        font-size: 25px;
+        padding-top: 3rem;
+    }
+}
+
+@media (max-width: 800px) {
+.planet {
+    grid-template-rows: auto auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+    "img img"
+    "planet planet"
+    "residents residents";
+
+    .planet-info {
+        .exit {
+            position: absolute;
+            right: 2rem;
+            top: 2rem;
+        }
+    }
+}
 }
