--- a/star-wars/src/styles.scss
+++ b/star-wars/src/styles.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    font-size: 1.6rem;
+    font-size: 16px;
     color: white;
     background-image: url('https://kam-man.ru/upload/iblock/9b7/9b749390707c31eb624e19776b5a0ad9.jpg');
     }
@@ -14,4 +14,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+a:hover, button:hover {
+    cursor: pointer;
 }
